# vexa

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  THIRD_PARTY_LICENSES.md  architecture.calm.json  architecture.seal.json  contracts.seal.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  schema.seal.json
.githooks/: pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-report.yml  3-prepared-issue.md
.github/workflows/: docs-current.yml  gates.yml  merge-card.yml  (+6 more)
core/gateway/services/gateway/: pyproject.toml
core/gateway/services/gateway/src/gateway/: adapters.py  app.py  config.v1.json  config_preflight.py  edge_guard.py  ports.py  ratelimit.py
core/gateway/services/gateway/tests/: conftest.py  test_adapters_resolve.py  test_config_contract.py  test_edge_guard.py  test_mcp_proxy.py  test_multiplex.py  test_proxy.py
deploy/: db-budget.json  execution-targets.example.json
licenses/: README.md  onnx-community-pyannote-segmentation-3.0.LICENSE.txt
release/: README.md  candidate-image-map.mjs  candidate-image-map.test.mjs  dockerhub-tag-audit.mjs  dockerhub-tag-audit.test.mjs
releases/: .gateignore  README.md
scripts/: changelog-collect.mjs  docs-current-gate.mjs  gates.mjs  gates.test.mjs  merge-card-gate.mjs  merge-card-gate.test.mjs  registry-candidate-validate.mjs  registry-candidate-validate.test.mjs  registry-manifest-alias.mjs  release-value-gate.mjs  release-witness-gate.mjs  release-witness-gate.test.mjs  release-witness-script.mjs  release-witness-template.mjs  sbom.mjs  schema_digest.py
(+400 files in other folders)
